--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.sources=src
 sonar.language=java
 #Path for libraries
 sonar.java.libraries=build/classes/
-sonar.java.binaries=target/classes
+sonar.java.binaries=build/classes
 sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/entity/**
 sonar.jacoco.reportPath=build/jacoco/test.exec
 sonar.java.coveragePlugin=jacoco
