--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,5 @@ sonar.java.binaries=build/classes
 sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/entity/**
 sonar.jacoco.reportPath=build/jacoco/test.exec
 sonar.java.coveragePlugin=jacoco
+#sonar.coverage.jacoco.xmlReportPaths
 
