--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+	//
 }
 apply plugin: 'jacoco'
-group = 'com.ts'
+group = 'com.raze'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -14,7 +15,7 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "Hoxton.RC1")
+	set('springCloudVersion', "Hoxton.M3")
 }
 
 dependencies {
@@ -23,18 +24,24 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-test'
-	//implementation 'org.apache.kafka:kafka-streams'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-config'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
-	//implementation 'org.springframework.kafka:spring-kafka'
+
+	//implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	// 'com.h2database:h2:1.4.199'
+	// https://mvnrepository.com/artifact/com.h2database/h2
+	//compile group: 'com.h2database', name: 'h2', version: '1.4.196'
+	compile group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.1'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.11'
+	compile group: 'com.github.danielwegener', name: 'logback-kafka-appender', version: '0.1.0'
+	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	compile group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.1'
-	//testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 dependencyManagement {
@@ -46,7 +53,6 @@ dependencyManagement {
 test {
 	useJUnitPlatform()
 }
-
 
 jacoco {
 	toolVersion = "0.7.9"
