--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-server:
-  port: 5050
+#server:
+#  port: 8085
 spring:
   jpa:
     database: MYSQL
@@ -20,3 +20,13 @@ spring:
     username: root
     password: TS@001002
     driver-class-name: com.mysql.jdbc.Driver
+  kafka:
+    bootstrap-servers: 13.233.252.31:9092
+    consumer:
+      group-id: svc_name
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: com.unittest.user.kafka.serde.JsonSerializer
