--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 	compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.11'
 	compile group: 'com.github.danielwegener', name: 'logback-kafka-appender', version: '0.1.0'
+	compileOnly 'org.projectlombok:lombok:1.18.10'
+	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
