--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.0.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
-	//
+    id 'org.springframework.boot' version '2.2.0.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'java'
+    //
 }
 apply plugin: 'jacoco'
 group = 'com.raze'
@@ -10,62 +10,74 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
-	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
+    mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
-	set('springCloudVersion', "Hoxton.M3")
+    set('springCloudVersion', "Hoxton.M3")
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-cache'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
 
-	//implementation 'org.springframework.cloud:spring-cloud-starter-config'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	// 'com.h2database:h2:1.4.199'
-	// https://mvnrepository.com/artifact/com.h2database/h2
-	//compile group: 'com.h2database', name: 'h2', version: '1.4.196'
-	compile group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.1'
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-	compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.11'
-	compile group: 'com.github.danielwegener', name: 'logback-kafka-appender', version: '0.1.0'
-	compileOnly 'org.projectlombok:lombok:1.18.10'
-	annotationProcessor 'org.projectlombok:lombok:1.18.10'
-	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+    //implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    // 'com.h2database:h2:1.4.199'
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    //compile group: 'com.h2database', name: 'h2', version: '1.4.196'
+    compile group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.11'
+    compile group: 'com.github.danielwegener', name: 'logback-kafka-appender', version: '0.1.0'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 jacoco {
-	toolVersion = "0.7.9"
-	reportsDir = file("$buildDir/customJacocoReportDir")
+    toolVersion = "0.7.9"
+    reportsDir = file("$buildDir/customJacocoReportDir")
 }
 
 jacocoTestReport {
-	reports {
-		xml.enabled false
-		csv.enabled false
-		html.enabled true
-		html.destination file("${buildDir}/jacocoHtml")
-	}
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.enabled true
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: ['com/ts/user/kafka/**',
+                                        'com/ts/user/entity/**',
+                                        'com/ts/user/shared/**',
+                                        'com/ts/user/service/impl/v1/UserServiceImpl.java',
+            ])
+        }))
+    }
 }
+
+
