--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.language=java
 #Path for libraries
 sonar.java.libraries=build/classes/
 sonar.java.binaries=build/classes
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/entity/**, **/kafka**
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/entity/**, **/kafka**, **/test/**
 sonar.jacoco.reportPath=build/jacoco/test.exec
 sonar.java.coveragePlugin=jacoco
 #sonar.coverage.jacoco.xmlReportPaths
